# VibeForge_svelte

./: .gitignore  ARCHITECTURE.md  CI_CD_SETUP.md  CONTEXT.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  DOCUMENT_INGESTION_CODE_REFERENCE.md  DOCUMENT_INGESTION_TESTING.md  E2E_AND_CI_COMPLETION_SUMMARY.md  FEATURES.md  INDEX.md  LIVE_TESTING_SESSION.md  LLM_PROVIDER_IMPLEMENTATION_SUMMARY.md  MCP_IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE3_COMPLETE.md  PHASE3_TEST_REPORT.md  PHASE_2.7_COMPLETION_CERTIFICATE.md  PHASE_2_7_COMPLETION_SUMMARY.md  PHASE_2_7_PROGRESS_REPORT.md  PHASE_3.2_PLAN.md  PHASE_3_TESTING_GUIDE.md  PHASE_4_OVERVIEW.md  QUICK_REFERENCE.md  README.md  README_DOCUMENT_INGESTION.md  REFACTORING_COMPLETE.md  REFACTORING_IMPLEMENTATION_CHECKLIST.md  REFACTORING_QUICK_REFERENCE.md  REFACTORING_TEST_RESULTS.md  REPO_CLEANUP_NOTES.md  RESEARCH_ASSIST_CODE.md  RESEARCH_ASSIST_EXAMPLES.md  RESEARCH_ASSIST_IMPLEMENTATION.md  RESEARCH_ASSIST_INDEX.md  RESEARCH_ASSIST_REFERENCE.md  RUNTIME_DETECTION_TESTS.md  SETUP.md  START_HERE.md  (+17 more)
.github/: copilot-instructions.md
coverage/: coverage-final.json  index.html
docs/: DEVELOPER_GUIDE.md  DOCUMENTATION_CONSOLIDATION.md  MCP_GUIDE.md  PHASE_2.7_PROGRESS.md  PHASE_2.7_TESTING_PLAN.md  PHASE_2.7_TESTING_SUMMARY.md  PHASE_2.7_TO_4_TRANSITION.md  PHASE_3.2_COMPLETION.md  (+24 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: code_analyzer.rs  main.rs  pattern_generator.rs  project_generator.rs  runtime_check.rs  runtime_detector.rs
src-tauri/tests/: pattern_generator_test.rs
(+577 files in other folders)
